// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update input-range preserves interpolated label content when removing label[tuiLabel]: test.html 1`] = `
{
  "0. Before": "
                <tui-input-range
                    [max]="max"
                    [min]="min"
                    [tuiNumberFormat]="numberFormat"
                    [(ngModel)]="value"
                >
                    <label tuiLabel>{{ rangeLabel }}</label>
                </tui-input-range>
            ",
  "1. After": "
                <tui-input-range
                    [max]="max"
                    [min]="min"
                    [tuiNumberFormat]="numberFormat"
                    [(ngModel)]="value"
                >
                    {{ rangeLabel }}
                </tui-input-range>
            ",
}
`;

exports[`ng-update input-range removes label[tuiLabel] inside tui-input-range: test.html 1`] = `
{
  "0. Before": "
                <tui-input-range
                    [max]="max"
                    [min]="min"
                    [tuiNumberFormat]="numberFormat"
                    [(ngModel)]="value"
                >
                    <label tuiLabel>Type number like a German</label>
                </tui-input-range>
            ",
  "1. After": "
                <tui-input-range
                    [max]="max"
                    [min]="min"
                    [tuiNumberFormat]="numberFormat"
                    [(ngModel)]="value"
                >
                    Type number like a German
                </tui-input-range>
            ",
}
`;

exports[`ng-update input-range renames TuiInputRangeModule import to TuiInputRange: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputRangeModule} from '@taiga-ui/legacy';

                @Component({
                    standalone: true,
                    imports: [TuiInputRangeModule],
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiInputRange } from "@taiga-ui/kit";

                                @Component({
                    standalone: true,
                    imports: [TuiInputRange],
                })
                export class TestComponent {}
            ",
}
`;
